changed social links

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 <div id="main">
 <h1>Contact Me</h1>
-<a href="https://gitlab.com/alestor123/" target="_blank"    style="color:rgb(49, 245, 163)"><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
+<a href="https://github.com/alestor123/" target="_blank"    style="color:rgb(49, 245, 163)"><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
 <a href="https://gitlab.com/alestor123/" target="_blank"    style="color:rgb(49, 245, 163)"><i class="fa fa-gitlab" aria-hidden="true"></i>GitLab</a>
-<a href="https://gitlab.com/alestor123/" target="_blank"    style="color:rgb(49, 245, 163)"><i class="fa fa-medium" aria-hidden="true"></i>Medium</a>
-<a href="https://gitlab.com/alestor123/" target="_blank"    style="color:rgb(49, 245, 163)"><i class="fa fa-codepen" aria-hidden="true"></i>CodePen</a>
+<a href="https://medium.com/@alestoraldous/" target="_blank"    style="color:rgb(49, 245, 163)"><i class="fa fa-medium" aria-hidden="true"></i>Medium</a>
+<a href="https://codepen.io/alestor123" target="_blank"    style="color:rgb(49, 245, 163)"><i class="fa fa-codepen" aria-hidden="true"></i>CodePen</a>
 </div>
 </body>
